--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://leandro-pixel.gihub.io/Leandro_Soares-",
+  "homepage": "https://leandro-pixel.github.io/Leandro_Soares-", 
   "name": "portfolio-insta",
   "private": true,
   "version": "0.0.0",
