--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "portfolio-insta",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://leandro-pixel.github.io/Leandro_Soares",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
@@ -32,6 +34,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "gh-pages": "^6.1.1",
     "vite": "^5.0.0"
   }
 }
